--- a/Sparse Classification.Rmd
+++ b/Sparse Classification.Rmd
@@ -6,6 +6,12 @@ output: html_document
 ---
 
 ```{r}
+library(hdrm)
+downloadData(Golub1999)
+attachData(Golub1999)
+
+set.seed(1)
+
 n = nrow(X)
 # Split data into train and test sets
 train_rows <- sample(1:n, n/2)
@@ -15,11 +21,36 @@ X.test <- X[-train_rows, ]
 y.train <- y[train_rows]
 y.test <- y[-train_rows]
 
+y.train = as.numeric(y.train) - 1
+y.test = as.numeric(y.test)-1
+train_df = data.frame(x  = X.train, y = as.factor(y.train))
+test_df = data.frame(x  = X.test, y = as.factor(y.test))
+
+dim(X)
 dim(X.train)
 dim(X.test)
 length(y.train)
 length(y.test)
 
+```
+# About the data
+```{r}
+plot(X, col= y)
+```
+```{r}
+hist(X, col = "green")
+```
+# This data set consists of 47 patients with acute lymphoblastic leukemia (ALL) and 25 patients with acute myeloid leukemia (AML). Each of the 72 patients had bone marrow samples obtained at the time of diagnosis. Gene expression measurements for the samples were taken using Affymetrix Hgu6800 chips, resulting in 7129 measurements per patient.Of the two diseases, AML has a considerably worse prognosis: only 26% survive at least 5 years following diagnosis, compared to 68% for ALL. #Includ dimesions of the training and test data.
 
+
+# Fit data into SVM
+```{r}
+library(e1071)
+set.seed(1)
+y.train = as.numeric(y.train) - 1
+y.test = as.numeric(y.test)-1
+train_df = data.frame(x  = X.train, y = as.factor(y.train))
+test_df = data.frame(x  = X.test, y = as.factor(y.test))
+svm.fit <-  svm(y.train~., data = train_df , kernel = "radial", gamma = 1, cost = 1)
 ```
 
